--- a/slambda-doc/package.json
+++ b/slambda-doc/package.json
@@ -22,13 +22,17 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@types/lodash": "^4.14.197",
     "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "@tsconfig/docusaurus": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "browserslist": {
     "production": [
