--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ authors = [
     { name = "Hao Wu", email = "haowu@dataset.sh" },
 ]
 description = "Making LLMs Calls Simple: Use LLMs Inference as Easy as a Regular Function!"
-readme = "README.md"
+readme = "readme.md"
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
