--- a/slambda-playground/package.json
+++ b/slambda-playground/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -46,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:6767"
 }
