--- a/slambda-playground/package.json
+++ b/slambda-playground/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -50,6 +52,7 @@
   },
   "proxy": "http://127.0.0.1:6767",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/lodash": "^4.14.197"
   }
 }
