--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis"
 ]
 dependencies = [
-    "pydantic >= 2.0.0",
+    "pydantic = ^2",
+    "flask = '^2'",
     "openai"
 ]
 license = { text = "MIT License" }
