--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -23,3 +23,7 @@ jobs:
       - name: Run unit tests
         run: |
           python -m unittest
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
