--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -19,10 +19,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install coverage
           pip install -e .
       - name: Run unit tests
         run: |
-          python -m unittest
+          coverage run -m unittest discover
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
