--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -21,9 +21,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install coverage
           pip install -e .
-      - name: Run unit tests
+      - name: Run tests with coverage
         run: |
           coverage run -m unittest discover
+      - name: Generate coverage report
+        run: |
+          coverage report
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
